--- a/index.html
+++ b/index.html
@@ -3,202 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welkom op mijn Portfolio</title>
+    <title>Doorstuur Website</title>
     <style>
-        /* Algemene stijlen */
+        /* Algemeen */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #1f2937;
-            color: #fff;
+            background-color: #1f1f1f; /* Bijna zwart */
+            color: white;
+            font-family: 'Arial', sans-serif;
             text-align: center;
-            padding: 50px;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin: 0;
-            overflow: hidden;
-            animation: fadeIn 2s ease-in-out;
-        }
-
-        h1 {
-            color: #FFD66B;
-            margin-bottom: 30px;
-            font-size: 4rem;
-            font-weight: 800;
-            animation: slideInFromTop 1.5s ease-out;
-        }
-
-        p {
-            font-size: 1.25rem;
-            color: #f9fafb;
-            opacity: 0.8;
-            margin-bottom: 40px;
+            flex-direction: column;
             animation: fadeIn 1.5s ease-out;
         }
 
-        /* Animatie voor fade-in */
+        /* Fade-in animatie voor het inladen van de pagina */
         @keyframes fadeIn {
-            0% {
+            from {
                 opacity: 0;
             }
-            100% {
+            to {
                 opacity: 1;
             }
         }
 
-        /* Animatie voor het inzoomen van de tekst */
-        @keyframes slideInFromTop {
-            0% {
-                transform: translateY(-50px);
-                opacity: 0;
-            }
-            100% {
-                transform: translateY(0);
-                opacity: 1;
-            }
+        h1 {
+            font-size: 3.5em;
+            margin-bottom: 30px;
+            animation: fadeIn 2s ease-out;
         }
 
-        /* De knoppen */
-        .btn-12,
-        .btn-12 *,
-        .btn-12 :after,
-        .btn-12 :before {
-            border: 0 solid;
-            box-sizing: border-box;
-        }
-
-        .btn-12 {
-            -webkit-tap-highlight-color: transparent;
-            -webkit-appearance: button;
-            background-color: #000;
-            background-image: none;
-            color: #FFD66B;
-            cursor: pointer;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 1.2rem;
-            font-weight: 700;
-            line-height: 1.5;
-            margin: 0;
-            -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
-            padding: 0.8rem 3rem;
-            text-transform: uppercase;
-            border-radius: 99rem;
-            border-width: 2px;
-            overflow: hidden;
+        /* Knoppen container */
+        .emoji-button-container {
             position: relative;
-            transition: all 0.3s ease-in-out;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-            animation: popIn 0.5s ease-out;
+            display: inline-block;
+            margin: 20px;
         }
 
-        /* Animatie voor knoppen */
-        @keyframes popIn {
-            0% {
-                transform: scale(0.9);
-                opacity: 0;
-            }
-            100% {
-                transform: scale(1);
-                opacity: 1;
-            }
-        }
-
-        .btn-12:disabled {
-            cursor: default;
-        }
-
-        .btn-12:focus {
-            outline: none;
-        }
-
-        .btn-12 span {
-            mix-blend-mode: difference;
-        }
-
-        .btn-12:after,
-        .btn-12:before {
-            background: linear-gradient(90deg, #fff 25%, transparent 0, transparent 50%, #fff 0, #fff 75%, transparent 0);
-            content: "";
-            inset: 0;
-            position: absolute;
-            transform: translateY(var(--progress, 100%));
-            transition: transform 0.2s ease;
-        }
-
-        .btn-12:after {
-            --progress: -100%;
-            background: linear-gradient(90deg, transparent 0, transparent 25%, #fff 0, #fff 50%, transparent 0, transparent 75%, #fff 0);
-            z-index: -1;
-        }
-
-        .btn-12:hover:after,
-        .btn-12:hover:before {
-            --progress: 0;
-        }
-
-        .btn-12:hover {
+        /* Knoppen */
+        .emoji-button {
             background-color: #FFD66B;
-            color: #000;
+            border: none;
+            padding: 15px 30px;
+            font-size: 20px;
+            font-weight: bold;
+            cursor: pointer;
+            position: relative;
+            z-index: 10;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        /* Knop animatie bij hover */
+        .emoji-button:hover {
+            transform: scale(1.1);
             box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3);
         }
 
-        .button-container {
+        /* Emoji animaties container */
+        .emoji-animations {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
-            animation: fadeIn 1s ease-in-out;
+            gap: 30px;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s ease;
         }
 
-        .button-container a {
-            text-decoration: none;
+        .emoji {
+            font-size: 45px;
+            opacity: 0;
+            transform: translateY(0);
+            transition: transform 0.5s ease, opacity 0.5s ease;
         }
 
-        /* Secties */
-        #portfolio, #tool {
-            display: none;
-            margin-top: 50px;
+        /* Emoji animatie bij hover op de knop */
+        .emoji-button:hover + .emoji-animations {
+            opacity: 1;
         }
 
-        .section-title {
-            font-size: 2rem;
-            margin-bottom: 20px;
-            color: #FFD66B;
+        .emoji-button:hover + .emoji-animations .emoji:nth-child(1) {
+            opacity: 1;
+            transform: translate(-50px, -50px);
         }
 
-        /* Responsive styling */
-        @media screen and (max-width: 768px) {
-            h1 {
-                font-size: 2.5rem;
-            }
-            .btn-12 {
-                padding: 0.6rem 2.5rem;
-            }
+        .emoji-button:hover + .emoji-animations .emoji:nth-child(2) {
+            opacity: 1;
+            transform: translate(50px, -50px);
         }
 
+        .emoji-button:hover + .emoji-animations .emoji:nth-child(3) {
+            opacity: 1;
+            transform: translate(-50px, 50px);
+        }
+
+        .emoji-button:hover + .emoji-animations .emoji:nth-child(4) {
+            opacity: 1;
+            transform: translate(50px, 50px);
+        }
     </style>
 </head>
 <body>
-    <h1>Welkom op mijn Portfolio</h1>
-    <p>Klik op een van de knoppen om verder te gaan:</p>
-    
-    <div class="button-container">
-        <!-- Knop voor Portfolio, linkt naar portfolio.lucasmangroelal.nl -->
-        <a href="https://portfolio.lucasmangroelal.nl" class="btn-12" target="_blank"><span>Bekijk mijn portfolio!</span></a>
-        
-        <!-- Knop voor Nieuwste Tool, linkt naar lucaskit.lucasmangroelal.nl -->
-        <a href="https://lucaskit.lucasmangroelal.nl" class="btn-12" target="_blank"><span>Bekijk mijn nieuwste tool!</span></a>
+    <div>
+        <h1>Hoi, ik ben lucasmangroelal</h1>
+        <a href="https://portfolio.lucasmangroelal.nl" class="emoji-button-container" target="_blank">
+            <button class="emoji-button">Bekijk mijn portfolio</button>
+            <div class="emoji-animations">
+                <span class="emoji">🧑‍💻</span>
+                <span class="emoji">😎</span>
+                <span class="emoji">💼</span>
+                <span class="emoji">🪪</span>
+            </div>
+        </a>
+        <a href="https://lucaskit.lucasmangroelal.nl" class="emoji-button-container" target="_blank">
+            <button class="emoji-button">Bekijk mijn eerste open-source tool</button>
+            <div class="emoji-animations">
+                <span class="emoji">💻</span>
+                <span class="emoji">👾</span>
+                <span class="emoji">🚀</span>
+                <span class="emoji">🔨</span>
+            </div>
+        </a>
     </div>
-
-    <script>
-        // Functie om de portfolio sectie weer te geven
-        function showPortfolio() {
-            document.getElementById('portfolio').style.display = 'block';
-            document.getElementById('tool').style.display = 'none';
-        }
-
-        // Functie om de tool sectie weer te geven
-        function showTool() {
-            document.getElementById('tool').style.display = 'block';
-            document.getElementById('portfolio').style.display = 'none';
-        }
-    </script>
 </body>
 </html>
