--- a/handleiding/sjb/Licht-installatie/index.html
+++ b/handleiding/sjb/Licht-installatie/index.html
@@ -19,6 +19,6 @@
   </style>
 </head>
 <body>
-  <iframe src="handleiding - sjb - Licht installatie.pdf"></iframe>
+  <iframe src="handleiding-sjb-Licht-installatie.pdf"></iframe>
 </body>
 </html>
