--- a/handleiding/sjb/Licht-installatie/index.html
+++ b/handleiding/sjb/Licht-installatie/index.html
@@ -16,9 +16,18 @@
       height: 100vh;
       border: none;
     }
+    header {
+      background-color: #003366;
+      color: white;
+      padding: 15px;
+      text-align: center;
+      font-size: 1.5em;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
+  <header>Handleiding Lichtinstallatie - SJB</header>
   <iframe src="handleiding-sjb-Licht-installatie.pdf"></iframe>
 </body>
 </html>
