--- a/handleiding/sjb/Licht-installatie/index.html
+++ b/handleiding/sjb/Licht-installatie/index.html
@@ -2,32 +2,10 @@
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Handleiding Lichtinstallatie</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      font-family: sans-serif;
-    }
-    iframe {
-      width: 100%;
-      height: 100vh;
-      border: none;
-    }
-    header {
-      background-color: #003366;
-      color: white;
-      padding: 15px;
-      text-align: center;
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; url=handleiding-sjb-Licht-installatie.pdf">
+  <title>Handleiding openen...</title>
 </head>
 <body>
-  <header>Handleiding Lichtinstallatie - SJB</header>
-  <iframe src="handleiding-sjb-Licht-installatie.pdf"></iframe>
+  <p>Je wordt doorgestuurd naar de handleiding... <a href="handleiding-sjb-Licht-installatie.pdf">Klik hier als het niet werkt</a>.</p>
 </body>
 </html>
