--- a/sgdc/index.html
+++ b/sgdc/index.html
@@ -78,7 +78,7 @@
     <p class="hint">Kies een game. Je Bits staan overal lokaal en synchroniseren tussen pagina’s.</p>
 
     <section class="grid" aria-label="Games">
-      <a class="game-btn" href="/snake/" role="button" aria-label="Speel Snake">
+      <a class="game-btn" href="/sgdc/snake/" role="button" aria-label="Speel Snake">
         <div class="g-thumb" style="background:linear-gradient(160deg,#50e3c2,#8a7cff)">Snake</div>
         <div class="g-body"><strong>Snake</strong><span class="pill">Nu spelen</span></div>
       </a>
