--- a/sgdc/index.html
+++ b/sgdc/index.html
@@ -78,8 +78,8 @@
 
   <!-- Content -->
   <main class="container">
-    <h1 style="margin:0 0 6px">SGDC Originals</h1>
-    <p class="hint">Kies een game. Je Bits staan overal lokaal en synchroniseren tussen pagina’s.</p>
+    <h1 style="margin:0 0 6px">SGDC Live</h1>
+    <p class="hint">Welkom Terug!</p>
 
     <section class="grid" aria-label="Games">
       <a class="game-btn" href="snake/" role="button" aria-label="Speel Snake">
