--- a/sgdc/index.html
+++ b/sgdc/index.html
@@ -87,7 +87,7 @@
         <div class="g-body"><strong>Snake</strong><span class="pill">Nu spelen</span></div>
       </a>
 
-      <a class="game-btn" href="mine/" role="button" aria-label="Speel Mines">
+      <a class="game-btn" href="mines/" role="button" aria-label="Speel Mines">
         <div class="g-thumb" style="background:linear-gradient(160deg,#ffe36d,#ff9f4d)">Mines</div>
         <div class="g-body"><strong>Mines</strong><span class="pill">Nu spelen</span></div>
       </a>
