--- a/sgdc/index.html
+++ b/sgdc/index.html
@@ -102,7 +102,7 @@
         <div class="g-body"><strong>Crash</strong><span class="pill">Komt binnenkort</span></div>
       </a>
 
-      <a class="game-btn soon" href="#" role="button" aria-label="Speel Blackjack">
+      <a class="game-btn soon" href="blackjack/" role="button" aria-label="Speel Blackjack">
         <div class="g-thumb" style="background:linear-gradient(160deg,#ff5386,#ff8a3d)">Blackjack</div>
         <div class="g-body"><strong>Blackjack</strong><span class="pill">Nu spelen</span></div>
       </a>
