--- a/sgdc/market/asset.html
+++ b/sgdc/market/asset.html
@@ -1,229 +1,108 @@
-<!doctype html>
-<html lang="nl">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>SGDC Live — Asset</title>
+/* SGDC Market Core — v1.1 (relatieve paden friendly) */
+window.Market = (function(){
+  const meta = {
+    SNK:{name:"Snacko",ui:{color:"#FFB84D",icon:"🍪"},tagline:"Alles uit de kantine in één mandje.",behavior:"Lichte stijging rond pauzes; zakt na schooltijd.",volatility:"laag-middel"},
+    FRIK:{name:"Frikandelium",ui:{color:"#FF6B3D",icon:"🌭"},tagline:"Knettervolatiel als de frituur aanslaat.",behavior:"Spikes tussen 10:30–11:00 en 12:30–13:30.",volatility:"hoog"},
+    COKE:{name:"ColaCap",ui:{color:"#D23B3B",icon:"🥤"},tagline:"Bruisende koers, soms teveel bubbels.",behavior:"Microrally’s om het halve uur; random dips.",volatility:"middel-hoog"},
+    BBIT:{name:"Bitterbit",ui:{color:"#E87B2E",icon:"🟤"},tagline:"Krokant rendement of verbrand je vingers.",behavior:"Range-bound met af en toe snelle knal.",volatility:"middel"},
+    HWK:{name:"HwCoin",ui:{color:"#8A9BB6",icon:"📚"},tagline:"Altijd een beetje bearish… tenzij studiedag.",behavior:"Langzame daling; +boost op studiedagen.",volatility:"laag"},
+    TCH:{name:"TeachToken",ui:{color:"#6EC77A",icon:"👩‍🏫"},tagline:"Gaat omhoog bij proefwerken & presentaties.",behavior:"Klimt op toetsdagen, corrigeert daarna.",volatility:"middel"},
+    WIFI:{name:"LaggyFi",ui:{color:"#4DB6E6",icon:"📶"},tagline:"Soms maan, soms modem uit 2003.",behavior:"Onvoorspelbare gaps (af en toe freeze tick).",volatility:"hoog"},
+    CHAIR:{name:"ChairChain",ui:{color:"#C9A06B",icon:"🪑"},tagline:"Elke kraak is een kans.",behavior:"Zakt bij incidenten; mean-revert langzaam.",volatility:"laag-middel"},
+    CHZB:{name:"CheezeBread",ui:{color:"#FFC94D",icon:"🧀"},tagline:"Simpel, zout, verrassend steady.",behavior:"Zeer stabiel; kleine intraday swing.",volatility:"laag"},
+    PPLX:{name:"PartyPlex",ui:{color:"#B86BFF",icon:"🎉"},tagline:"Explodeert voor feesten, implodeert erna.",behavior:"Harde run-ups vóór events, dump na afloop.",volatility:"zeer hoog"},
+  };
 
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800&display=swap" rel="stylesheet"/>
+  const LS={ get(k,d){try{const v=localStorage.getItem(k);return v?JSON.parse(v):d}catch{return d}}, set(k,v){localStorage.setItem(k,JSON.stringify(v))} };
+  const bitsKey='bitsBalance', assetsKey='market.assets', portfolioKey='portfolio', histPrefix='market.history.';
 
-  <style>
-    :root{
-      --bg:#0e1023; --panel:#171a37; --card:#141736; --text:#e8ecff; --muted:#a2a9d6;
-      --good:#4bd37b; --bad:#ff6b6b; --border:rgba(255,255,255,.10); --shadow:0 10px 30px rgba(0,0,0,.35);
+  const bits={ get(){const v=parseInt(localStorage.getItem(bitsKey)||'0',10);return isNaN(v)?0:v;}, set(v){localStorage.setItem(bitsKey,String(Math.max(0,Math.floor(v))))} };
+
+  let assets={};
+  const fee=0.005;
+  const symbols=()=>Object.keys(meta);
+
+  function seedHistoryArray(startPrice, vol, anchor){
+    const N=2000; const data=new Array(N); let p=startPrice;
+    for(let i=0;i<N;i++){
+      const r=(Math.random()*2-1)*(vol*0.9); const theta=0.02;
+      p=p*(1+r)+theta*(anchor-p);
+      const hour=i%720; if(hour>330&&hour<390) p*=1.0006; if(hour>650&&hour<720) p*=0.9996;
+      p=Math.max(1,+p.toFixed(2)); data[i]=p;
     }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,system-ui,sans-serif;background:var(--bg);color:var(--text)}
-    .nav{max-width:1200px;margin:0 auto;padding:12px 16px;display:flex;align-items:center;gap:10px}
-    .back{border:1px solid var(--border);background:#ffffff12;padding:8px 10px;border-radius:10px;text-decoration:none;color:var(--text)}
-    .spacer{flex:1}
-    .balance{font-weight:800;color:var(--good)}
-    .container{max-width:1200px;margin:0 auto;padding:16px}
+    return data;
+  }
+  const setHistory=(sym,arr)=>LS.set(histPrefix+sym,arr);
+  function pushHistory(sym, price){
+    const key=histPrefix+sym; const arr=LS.get(key,[]); arr.push(+price.toFixed(2)); if(arr.length>3000) arr.shift(); LS.set(key,arr);
+  }
+  const history=(sym)=>LS.get(histPrefix+sym,[]);
 
-    .head{display:flex;align-items:center;gap:12px;flex-wrap:wrap}
-    .title{font-weight:800;font-size:22px}
-    .ticker{font-size:12px;color:var(--muted)}
-    .pill{background:#ffffff1a;border:1px solid var(--border);padding:6px 10px;border-radius:999px;font-size:12px}
-    .pill.up{color:var(--good)} .pill.down{color:var(--bad)}
-
-    .grid{display:grid;grid-template-columns:1.2fr .8fr;gap:16px;margin-top:16px}
-    @media (max-width:900px){ .grid{grid-template-columns:1fr} }
-
-    .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:14px;box-shadow:var(--shadow)}
-    canvas{width:100%;height:260px;display:block}
-
-    .tf{display:flex;gap:8px;margin-top:10px;flex-wrap:wrap}
-    .btn{padding:8px 10px;border-radius:10px;border:1px solid var(--border);background:#ffffff12;color:var(--text);cursor:pointer}
-    .btn.active{background:#ffffff22}
-
-    .field{display:flex;flex-direction:column;gap:6px;margin-bottom:10px}
-    input[type=number]{background:#0f1330;color:var(--text);border:1px solid var(--border);border-radius:10px;padding:10px}
-    .actions{display:flex;gap:8px;flex-wrap:wrap}
-    .buy{background:linear-gradient(90deg,#37d87c,#2bb56a);border:none}
-    .sell{background:#ffd66b;border:none;color:#0d0b06}
-    .swap{background:#9c7cff;border:none}
-    .small{font-size:12px;color:var(--muted)}
-  </style>
-</head>
-<body>
-  <nav class="nav">
-    <a class="back" href="./">← Terug</a>
-    <div class="spacer"></div>
-    <div class="balance">Bits: <span id="bitsHeader">0</span></div>
-  </nav>
-
-  <main class="container">
-    <div class="head">
-      <div id="icon" class="pill">📦</div>
-      <div class="title" id="name">Asset</div>
-      <div class="ticker" id="ticker">TICK</div>
-      <div class="pill" id="dayDelta">+0.00%</div>
-      <div class="pill" id="price">₿0.00</div>
-    </div>
-
-    <div class="grid">
-      <div class="card">
-        <canvas id="chart" width="900" height="260"></canvas>
-        <div class="tf">
-          <button class="btn active" data-tf="1h">1h</button>
-          <button class="btn" data-tf="1d">1d</button>
-          <button class="btn" data-tf="1w">1w</button>
-          <button class="btn" data-tf="1m">1m</button>
-          <button class="btn" data-tf="all">All</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="field">
-          <label>Koop — bedrag in Bits</label>
-          <input type="number" id="buyBits" min="1" value="10"/>
-          <div class="small">Fee: <span id="feeBuy">0.50%</span></div>
-          <div class="actions">
-            <button class="btn buy" id="btnBuy">Kopen</button>
-            <button class="btn swap" id="btnSwap">Swap naar…</button>
-          </div>
-        </div>
-
-        <div class="field">
-          <label>Verkoop — aantal stuks</label>
-          <input type="number" id="sellQty" min="1" value="1"/>
-          <div class="actions">
-            <button class="btn sell" id="btnSell">Verkopen</button>
-          </div>
-          <div class="small">Jouw positie: <span id="posInfo">0 stuks @ ₿0.00</span></div>
-        </div>
-
-        <div class="field">
-          <label>Storten/Opnemen (debug / event)</label>
-          <div class="actions">
-            <button class="btn" id="btnDeposit">+100 Bits</button>
-            <button class="btn" id="btnWithdraw">-100 Bits</button>
-          </div>
-        </div>
-
-        <div class="small" id="hint"></div>
-      </div>
-    </div>
-
-    <div class="card" style="margin-top:16px">
-      <div class="title" style="font-size:18px">Over deze coin</div>
-      <div id="about" class="small" style="margin-top:8px"></div>
-    </div>
-  </main>
-
-  <script src="../js/bits.js"></script>
-  <script src="./market.js?v=2"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      if(!window.Market){ alert('market.js niet geladen'); return; }
-
-      const q = new URLSearchParams(location.search);
-      const sym = q.get('symbol') || 'SNK';
-
-      function setActiveTf(tf){
-        document.querySelectorAll('.tf .btn').forEach(b=>b.classList.toggle('active', b.dataset.tf===tf));
-      }
-
-      function renderHeader(){
-        document.getElementById('bitsHeader').textContent = Market.bits.get();
-        const meta = Market.meta[sym] || {name:sym, ui:{icon:'📦'}};
-        const a = Market.assets[sym];
-
-        document.getElementById('icon').textContent = meta.ui.icon || '📦';
-        document.getElementById('name').textContent = meta.name || sym;
-        document.getElementById('ticker').textContent = sym;
-        document.getElementById('price').textContent = '₿'+a.price.toFixed(2);
-
-        const pct = ((a.price - a.yClose)/a.yClose)*100;
-        const dd = document.getElementById('dayDelta');
-        dd.textContent = (pct>=0?'+':'')+pct.toFixed(2)+'%';
-        dd.className = 'pill ' + (pct>=0?'up':'down');
-
-        document.getElementById('hint').textContent = meta.tagline + ' — ' + meta.behavior;
-        document.getElementById('about').innerHTML =
-          `<div><strong>Volatiliteit:</strong> ${meta.volatility}</div><div style="margin-top:6px">${meta.behavior}</div>`;
-
-        const pos = Market.portfolio()[sym] || {qty:0, avg:0};
-        document.getElementById('posInfo').textContent = `${pos.qty} stuks @ ₿${pos.avg.toFixed(2)}`;
-        document.getElementById('feeBuy').textContent = (Market.fee*100).toFixed(2)+'%';
-      }
-
-      function drawChart(tf='1h'){
-        const c = document.getElementById('chart');
-        const ctx = c.getContext('2d');
-        ctx.clearRect(0,0,c.width,c.height);
-
-        const hist = Market.history(sym);
-        if(!hist.length) return;
-
-        const map = { '1h':120, '1d':720, '1w':720*5, '1m':720*20, 'all':hist.length };
-        const take = Math.min(map[tf] || hist.length, hist.length);
-        const data = hist.slice(-take);
-
-        const min = Math.min(...data);
-        const max = Math.max(...data);
-        const pad = 6, W = c.width, H = c.height;
-
-        ctx.globalAlpha = .15;
-        ctx.strokeStyle = '#ffffff';
-        ctx.beginPath(); ctx.moveTo(pad, H/2); ctx.lineTo(W-pad, H/2); ctx.stroke();
-        ctx.globalAlpha = 1;
-
-        ctx.beginPath();
-        data.forEach((v,i)=>{
-          const x = pad + (i/(data.length-1))*(W-2*pad);
-          const y = H - pad - ((v-min)/(max-min||1))*(H-2*pad);
-          if(i===0) ctx.moveTo(x,y); else ctx.lineTo(x,y);
-        });
-        ctx.lineWidth = 2; ctx.strokeStyle = '#8a7cff'; ctx.stroke();
-
-        const last = data[data.length-1];
-        const xLast = pad + (data.length-1)/(data.length-1)*(W-2*pad);
-        const yLast = H - pad - ((last-min)/(max-min||1))*(H-2*pad);
-        ctx.fillStyle = '#ffd66b'; ctx.beginPath(); ctx.arc(xLast,yLast,3,0,Math.PI*2); ctx.fill();
-      }
-
-      document.querySelectorAll('.tf .btn').forEach(b=>{
-        b.onclick = ()=>{ setActiveTf(b.dataset.tf); drawChart(b.dataset.tf); };
-      });
-
-      document.getElementById('btnBuy').onclick = ()=>{
-        const a = Market.assets[sym];
-        const bits = Math.max(1, Math.floor(Number(document.getElementById('buyBits').value||0)));
-        const qty = Math.floor(bits / (a.price*(1+Market.fee)));
-        if(qty<=0){ alert('Te weinig Bits voor minimaal 1 stuk.'); return; }
-        const res = Market.buy(sym, qty); if(!res.ok) alert(res.msg);
-        renderHeader(); drawChart(document.querySelector('.tf .btn.active').dataset.tf);
-      };
-      document.getElementById('btnSell').onclick = ()=>{
-        const qty = Math.max(1, Math.floor(Number(document.getElementById('sellQty').value||0)));
-        const res = Market.sell(sym, qty); if(!res.ok) alert(res.msg);
-        renderHeader(); drawChart(document.querySelector('.tf .btn.active').dataset.tf);
-      };
-      document.getElementById('btnDeposit').onclick = ()=>{ Market.bits.set(Market.bits.get()+100); renderHeader(); };
-      document.getElementById('btnWithdraw').onclick = ()=>{ Market.bits.set(Math.max(0, Market.bits.get()-100)); renderHeader(); };
-      document.getElementById('btnSwap').onclick = ()=>{
-        const target = prompt('Swap naar symbol (bijv. SNK, FRIK, ...):','SNK');
-        if(!target || !Market.assets[target]){ alert('Onbekende target.'); return; }
-        const qty = Math.max(1, Math.floor(Number(prompt('Aantal te swappen (verkoop huidig, koop target):','1')||0)));
-        const res = Market.swap(sym, target, qty); alert(res.msg);
-        renderHeader(); drawChart(document.querySelector('.tf .btn.active').dataset.tf);
-      };
-
-      function loop(){
-        Market.tickAll();
-        if(Math.random()<0.70){
-          renderHeader();
-          drawChart(document.querySelector('.tf .btn.active')?.dataset.tf || '1h');
-        }
-        requestAnimationFrame(loop);
-      }
-
-      Market.init();
-      setActiveTf('1h'); renderHeader(); drawChart('1h'); loop();
+  function initAssets(force=false){
+    const existing=LS.get(assetsKey,null);
+    if(existing && !force){ assets=existing; symbols().forEach(sym=>{ if(!assets[sym]){ const p=50+Math.random()*100; assets[sym]={price:+p.toFixed(2),anchor:+p.toFixed(2),vol:.008,yClose:+p.toFixed(2)}; } }); LS.set(assetsKey,assets); return; }
+    const seeded={}; const seedStart={SNK:95,FRIK:42,COKE:60,BBIT:33,HWK:21,TCH:78,WIFI:54,CHAIR:18,CHZB:12,PPLX:140};
+    const volMap={SNK:.007,FRIK:.012,COKE:.010,BBIT:.008,HWK:.005,TCH:.009,WIFI:.014,CHAIR:.006,CHZB:.004,PPLX:.018};
+    symbols().forEach(sym=>{
+      const p0=seedStart[sym]??50; const anchor=p0; const vol=volMap[sym]||.008;
+      const yClose=+(p0*(1+(Math.random()*2-1)*0.02)).toFixed(2);
+      setHistory(sym, seedHistoryArray(p0,vol,anchor));
+      seeded[sym]={price:p0,anchor,vol,yClose};
     });
-  </script>
-</body>
-</html>
+    assets=seeded; LS.set(assetsKey,assets);
+  }
+
+  function indexNowY(){
+    const syms=symbols(); const now=syms.reduce((s,k)=>s+assets[k].price,0)/syms.length; const y=syms.reduce((s,k)=>s+assets[k].yClose,0)/syms.length; return {now,y};
+  }
+
+  function getPortfolio(){ return LS.get(portfolioKey,{}); }
+  function setPortfolio(p){ LS.set(portfolioKey,p); }
+  function portfolioValue(){
+    const p=getPortfolio(); let sum=0; for(const [sym,pos] of Object.entries(p)){ if(!assets[sym]) continue; sum += pos.qty*assets[sym].price; } return Math.floor(sum);
+  }
+
+  function buy(sym, qty){
+    qty=Math.floor(qty); if(qty<=0) return {ok:false,msg:'Ongeldige hoeveelheid.'};
+    const a=assets[sym]; if(!a) return {ok:false,msg:'Onbekend asset.'};
+    const cost=Math.ceil(qty*a.price*(1+fee)); if(bits.get()<cost) return {ok:false,msg:'Onvoldoende Bits.'};
+    bits.set(bits.get()-cost);
+    const p=getPortfolio(); const pos=p[sym]||{qty:0,avg:0}; const newQty=pos.qty+qty; const newAvg=(pos.qty*pos.avg+qty*a.price)/newQty;
+    p[sym]={qty:newQty,avg:+newAvg.toFixed(2)}; setPortfolio(p);
+    return {ok:true,msg:`Kocht ${qty} ${sym} @ ₿${a.price.toFixed(2)} (fee ${(fee*100).toFixed(2)}%)`};
+  }
+  function sell(sym, qty){
+    qty=Math.floor(qty); if(qty<=0) return {ok:false,msg:'Ongeldige hoeveelheid.'};
+    const a=assets[sym]; if(!a) return {ok:false,msg:'Onbekend asset.'};
+    const p=getPortfolio(); const pos=p[sym]; if(!pos||pos.qty<qty) return {ok:false,msg:'Niet genoeg positie.'};
+    const proceeds=Math.floor(qty*a.price*(1-fee)); bits.set(bits.get()+proceeds);
+    const newQty=pos.qty-qty; if(newQty<=0) delete p[sym]; else p[sym]={qty:newQty,avg:pos.avg}; setPortfolio(p);
+    const pl=(a.price-pos.avg)*qty-(qty*a.price*fee); return {ok:true,msg:`Verkocht ${qty} ${sym} @ ₿${a.price.toFixed(2)} (P/L ${pl>=0?'+':''}${pl.toFixed(2)})`};
+  }
+  function swap(fromSym,toSym,qty){
+    if(fromSym===toSym) return {ok:false,msg:'Zelfde asset.'};
+    const s1=sell(fromSym,qty); if(!s1.ok) return s1;
+    const a=assets[toSym]; const buyable=Math.floor(bits.get()/(a.price*(1+fee)));
+    if(buyable<=0) return {ok:true,msg:`Verkocht ${qty} ${fromSym}. Niet genoeg Bits om ${toSym} te kopen na fees.`};
+    buy(toSym,buyable); return {ok:true,msg:`Swap: -${qty} ${fromSym}, +${buyable} ${toSym}.`};
+  }
+
+  function tickOne(sym){
+    const a=assets[sym]; const r=(Math.random()*2-1)*a.vol; const theta=0.02;
+    let p=a.price*(1+r)+theta*(a.anchor-a.price);
+    const now=new Date(); const tmin=now.getHours()*60+now.getMinutes();
+    if(sym==='SNK'||sym==='FRIK'){ if((tmin>=630&&tmin<=660)||(tmin>=750&&tmin<=780)) p*=1.002; }
+    if(sym==='PPLX'){ if(Math.random()<0.02) p*=1.01; if(Math.random()<0.02) p*=0.99; }
+    if(sym==='WIFI'){ if(Math.random()<0.02) return; if(Math.random()<0.01) p*=(Math.random()<0.5?0.98:1.02); }
+    a.price=Math.max(1,+p.toFixed(2)); pushHistory(sym,a.price);
+  }
+  function tickAll(){ for(const sym of symbols()) tickOne(sym); LS.set(assetsKey,assets); }
+
+  function init(){
+    if(!localStorage.getItem(bitsKey)) bits.set(1000);
+    initAssets();
+    symbols().forEach(sym=>{ if(!history(sym).length){ const a=assets[sym]; setHistory(sym,seedHistoryArray(a.price,a.vol,a.anchor)); }});
+  }
+
+  return { meta, get assets(){return assets}, symbols, bits, fee, init, tickAll, history, indexNowY, portfolio:getPortfolio, portfolioValue, buy, sell, swap };
+})();
